--- a/한화생명/index.html
+++ b/한화생명/index.html
@@ -32,7 +32,7 @@
             <a href="">전체상품</a>
             <div class="sub-menu">
               <div class="container">
-                <a href="" class="banner-text">
+                <!-- <a href="" class="banner-text">
                   <div class="banner-text-content">
                     <p>e시그니처암보험(무) 비갱신</p>
                     <p>
@@ -44,9 +44,9 @@
                     src="https://static.hanwhalife.com/static/hlp/direct/images/banner/pc-header-reco-banner-cancer.svg"
                     alt="보험료 인상 없이 암진단•수술•치료보장"
                   />
-                </a>
+                </a> -->
                 <!-- // 배너 -->
-                <div class="sub-menu-list">
+                <!-- <div class="sub-menu-list">
                   <div>
                     <p>보험</p>
                     <ul>
@@ -66,14 +66,48 @@
                       <li><a href="">담보대출</a></li>
                     </ul>
                   </div>
-                </div>
+                </div> -->
                 <!-- // 서브메뉴 -->
               </div>
             </div>
           </li>
           <li>
             <a href="">고객센터</a>
-            <!-- <div class="sub-menu">2</div> -->
+            <div class="sub-menu">
+              <div class="container">
+                <div class="sub-menu-help">
+                  <div class="help-join">
+                    <div class="help-join-text">다이렉트 가입문의</div>
+                    <div class="help-join-tel">1544-6385</div>
+                  </div>
+                  <div class="sub-menu-counseling">
+                    <a href="">
+                      <img src="./assets/img/kakao.svg" alt="카카오톡 상담">
+                      <div>카카오톡 상담</div>
+                    </a>
+                    <a href="">
+                      <img src="./assets/img/tel.svg" alt="전화상담예약">
+                      <div>전화상담예약</div>
+                    </a>
+                    <a href="">
+                      <img src="./assets/img/email.svg" alt="이메일 상담">
+                      <div>이메일 상담</div>
+                    </a>
+                  </div>
+                </div>
+                <!-- //left -->
+                <div class="sub-menu-question">
+                  <ul>
+                    <li>자주묻는질문</li>
+                    <li>상담하기</li>
+                    <li>지점찾기</li>
+                    <li>보험가입안내</li>
+                    <li>보험용어사전</li>
+                  </ul>
+                </div>
+                <!-- //right -->
+              </div>
+            </div>
           </li>
           <li><a href="">공지사항</a></li>
           <li><a href="">이벤트·혜택</a></li>
