--- a/한화생명/index.html
+++ b/한화생명/index.html
@@ -32,7 +32,7 @@
             <a href="">전체상품</a>
             <div class="sub-menu">
               <div class="container">
-                <!-- <a href="" class="banner-text">
+                <a href="" class="banner-text">
                   <div class="banner-text-content">
                     <p>e시그니처암보험(무) 비갱신</p>
                     <p>
@@ -44,9 +44,9 @@
                     src="https://static.hanwhalife.com/static/hlp/direct/images/banner/pc-header-reco-banner-cancer.svg"
                     alt="보험료 인상 없이 암진단•수술•치료보장"
                   />
-                </a> -->
+                </a>
                 <!-- // 배너 -->
-                <!-- <div class="sub-menu-list">
+                <div class="sub-menu-list">
                   <div>
                     <p>보험</p>
                     <ul>
@@ -66,7 +66,7 @@
                       <li><a href="">담보대출</a></li>
                     </ul>
                   </div>
-                </div> -->
+                </div>
                 <!-- // 서브메뉴 -->
               </div>
             </div>
@@ -75,37 +75,37 @@
             <a href="">고객센터</a>
             <div class="sub-menu">
               <div class="container">
-                <div class="sub-menu-help">
-                  <div class="help-join">
-                    <div class="help-join-text">다이렉트 가입문의</div>
-                    <div class="help-join-tel">1544-6385</div>
+                <div class="sub-menu-left">
+                  <div class="sub-menu-join">
+                    <div class="join-title">다이렉트 가입문의</div>
+                    <div class="join-tell">1544-6385</div>
                   </div>
-                  <div class="sub-menu-counseling">
-                    <a href="">
-                      <img src="./assets/img/kakao.svg" alt="카카오톡 상담">
-                      <div>카카오톡 상담</div>
-                    </a>
-                    <a href="">
-                      <img src="./assets/img/tel.svg" alt="전화상담예약">
-                      <div>전화상담예약</div>
-                    </a>
-                    <a href="">
-                      <img src="./assets/img/email.svg" alt="이메일 상담">
-                      <div>이메일 상담</div>
-                    </a>
+                  <!-- 다이렉트 가입문의 / 번호 -->
+                  <div class="link-wrap">
+                    <div>
+                      <img src="./assets/img/kakao.svg" alt="카카오톡 상담" />
+                      <span>카카오톡 상담</span>
+                    </div>
+                    <div>
+                      <img src="./assets/img/tel.svg" alt="전화상담예약" />
+                      <span>전화상담예약</span>
+                    </div>
+                    <div>
+                      <img src="./assets/img/email.svg" alt="이메일 상담" />
+                      <span>이메일 상담</span>
+                    </div>
                   </div>
+                  <!-- 상담부분 -->
                 </div>
-                <!-- //left -->
-                <div class="sub-menu-question">
+                <div class="sub-menu-right">
                   <ul>
-                    <li>자주묻는질문</li>
-                    <li>상담하기</li>
-                    <li>지점찾기</li>
-                    <li>보험가입안내</li>
-                    <li>보험용어사전</li>
+                    <li><a href="">자주묻는질문</a></li>
+                    <li><a href="">상담하기</a></li>
+                    <li><a href="">지점찾기</a></li>
+                    <li><a href="">보험가입안내</a></li>
+                    <li><a href="">보험용어사전</a></li>
                   </ul>
                 </div>
-                <!-- //right -->
               </div>
             </div>
           </li>
@@ -119,7 +119,98 @@
       </div>
     </header>
     <section class="recomend">
-      <div class="container"></div>
+      <div class="container">
+        <div class="recomend-left">
+          <p>오늘의 추천</p>
+          <div class="recomend-banner swiper-container">
+            <ul class="swiper-wrapper">
+              <li class="swiper-slide">
+                <a href="">
+                  <p class="slide-title">e시그니처암보험(무) 비갱신</p>
+                  <p class="slide-content">
+                    보험료 인상 없이 <br />암진단•수술•치료보장
+                  </p>
+                  <div class="slide-look">자세히 보기</div>
+                </a>
+              </li>
+              <li class="swiper-slide"><a href=""></a></li>
+              <li class="swiper-slide"><a href=""></a></li>
+              <li class="swiper-slide"><a href=""></a></li>
+              <li class="swiper-slide"><a href=""></a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- //left -->
+        <div class="recomend-right">
+          <div class="recomend-product">
+            <p>보험상품</p>
+            <div>
+              <a href="#">
+                <img
+                  src="https://api.hanwhalife.com/tom/images/Dg3hw61.png"
+                  alt="암"
+                />
+                <span>암</span>
+              </a>
+              <a href="#">
+                <img
+                  src="https://api.hanwhalife.com/tom/images/SLZEg.png"
+                  alt="건강"
+                />
+                <span>건강</span>
+              </a>
+              <a href="#">
+                <img
+                  src="https://api.hanwhalife.com/tom/images/zL4l0P3.png"
+                  alt="사망"
+                />
+                <span>사망</span>
+              </a>
+              <a href="#">
+                <img
+                  src="https://api.hanwhalife.com/tom/images/XZ9ICc942.png"
+                  alt="저축·연금"
+                />
+                <span>저축·연금</span>
+              </a>
+              <a href="#">
+                <img
+                  src="https://api.hanwhalife.com/tom/images/fk5P92.png"
+                  alt="유병자"
+                />
+                <span>유병자</span>
+              </a>
+            </div>
+          </div>
+          <div class="recomend-product">
+            <p>대출상품</p>
+            <div>
+              <a href="#">
+                <img
+                  src="https://api.hanwhalife.com/tom/images/vof90MnE.png"
+                  alt="보험계약대출"
+                />
+                <span>보험계약대출</span>
+              </a>
+              <a href="#">
+                <img
+                  src="https://api.hanwhalife.com/tom/images/0M0.png"
+                  alt="신용대출"
+                />
+                <span>신용대출</span>
+              </a>
+              <a href="#">
+                <img
+                  src="https://api.hanwhalife.com/tom/images/OXc2zB.png"
+                  alt="담보대출"
+                />
+                <span>담보대출</span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- //right -->
+      </div>
     </section>
     <section class="product">
       <div class="container"></div>
