--- a/한화생명/index.html
+++ b/한화생명/index.html
@@ -337,58 +337,58 @@
                 alt="사망"
               />
               <p>사망</p>
-              <div>new</div>
+              <div class="new-box">NEW</div>
             </div>
             <p>
               선택한 기간 동안만 사망보험금 <br />
               보장받아 실속있는 정기보험
             </p>
-            <p>사망보장·실속준비</p>
+            <span>사망보장·실속준비</span>
           </a>
           <a href="">
             <div>
               <img
-                src="https://api.hanwhalife.com/tom/images/zL4l0P3.png"
-                alt="사망"
+                src="https://api.hanwhalife.com/tom/images/XZ9ICc942.png"
+                alt="저축·연금"
               />
-              <p>사망</p>
-              <div>new</div>
+              <p>저축·연금</p>
+              <div class="new-box">NEW</div>
             </div>
             <p>
-              선택한 기간 동안만 사망보험금 <br />
-              보장받아 실속있는 정기보험
+              100% 원금보장에 이자까지 <br />
+              더해주는 현명한 저축보험
             </p>
-            <p>사망보장·실속준비</p>
+            <span>목돈마련·1억모으기</span>
           </a>
           <a href="">
             <div>
               <img
-                src="https://api.hanwhalife.com/tom/images/zL4l0P3.png"
-                alt="사망"
+                src="https://api.hanwhalife.com/tom/images/Dg3hw61.png"
+                alt="암"
               />
-              <p>사망</p>
-              <div>new</div>
+              <p>암</p>
+              <div class="new-box">NEW</div>
             </div>
             <p>
-              선택한 기간 동안만 사망보험금 <br />
-              보장받아 실속있는 정기보험
+              보험료 인상없이 최대 1억원 <br />
+              보장하는 든든한 암보험
             </p>
-            <p>사망보장·실속준비</p>
+            <span>비흡연할인·100세보장</span>
           </a>
           <a href="">
             <div>
               <img
-                src="https://api.hanwhalife.com/tom/images/zL4l0P3.png"
-                alt="사망"
+                src="https://api.hanwhalife.com/tom/images/0M0.png"
+                alt="신용대출"
               />
-              <p>사망</p>
-              <div>new</div>
+              <p>신용대출</p>
+              <div class="new-box">NEW</div>
             </div>
             <p>
-              선택한 기간 동안만 사망보험금 <br />
-              보장받아 실속있는 정기보험
+              보험계약자 전용 <br />
+              한도높은 신용대출
             </p>
-            <p>사망보장·실속준비</p>
+            <span>보험고객신용·신용·보험계약자대출</span>
           </a>
         </div>
       </div>
