--- a/한화생명/index.html
+++ b/한화생명/index.html
@@ -55,6 +55,9 @@
             );
           }
         });
+
+        // 하단 슬라이드 스크립트
+        ////////
       });
     </script>
   </head>
@@ -394,7 +397,124 @@
       </div>
     </section>
     <section class="notice">
-      <div class="container"></div>
+      <div class="container">
+        <div class="notice-header">
+          <div class="notice-left">
+            <p class="notice-title">공지사항</p>
+            <ul>
+              <li>
+                <a href="">
+                  <div>다이렉트 홈페이지 24년 4월 1일자 개정 안내</div>
+                  <span>2024.3.27</span>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <div>한화생명, ‘ISMS-P 인증’ 획득</div>
+                  <span>2024.1.30</span>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <div>다이렉트 홈페이지 24년 1월 1일자 개정 안내</div>
+                  <span>2023.12.21</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="notice-right">
+            <p class="notice-title">한화생명 앱 다운로드</p>
+            <p class="notice-content">
+              보험을 가입부터 관리까지 한번에!<br />한화생명 모바일앱을
+              만나보세요.
+            </p>
+            <a href="#">
+              <img
+                src="https://static.hanwhalife.com/static/hlp/direct/images/img_store_google.svg"
+                alt="구글 플레이 스토어 다운로드"
+              />
+            </a>
+            <a href="#">
+              <img
+                src="https://static.hanwhalife.com/static/hlp/direct/images/img_store_apple.svg"
+                alt="앱 스토어 다운로드"
+              />
+            </a>
+            <div class="notice-qr">
+              <img
+                src="https://static.hanwhalife.com/static/hlp/direct/images/img_qr.svg"
+                alt="앱 다운로드 QR 코드"
+              />
+              <span>앱 다운로드 QR 코드</span>
+            </div>
+          </div>
+        </div>
+        <div class="notice-banner">
+          <a href="#" class="notice-banner-left">
+            <div>
+              <p class="notice-banner-title">온라인 보험 이벤트</p>
+              <p class="notice-banner-content">
+                온라인 보험 가입하면 <br />네이버페이 상품권 지급!
+              </p>
+            </div>
+            <img
+              src="/assets/img/event-banner.jpg"
+              alt="온라인 보험 가입하면 네이버페이 상품권 지급!"
+            />
+          </a>
+          <div class="notice-banner-right">
+            <ul class="swiper-wrapper">
+              <li class="swiper-slide slide1">
+                <a href="">
+                  <div>
+                    <p class="notice-banner-title">글로벌암보호서비스</p>
+                    <p class="notice-banner-content">
+                      시그니처 암보험을 통해<br />국내 최초로 시작됩니다.
+                    </p>
+                  </div>
+                  <img
+                    src="/assets/img/banner-woo.jpg"
+                    alt="시그니처 암보험을 통해 국내 최초로 시작됩니다."
+                  />
+                </a>
+              </li>
+              <li class="swiper-slide slide2">
+                <a href="#">
+                  <div>
+                    <p class="notice-banner-title">Carrot</p>
+                    <p class="notice-banner-content">
+                      적게 탄만큼 적게내는 캐롯 퍼마일 자동차보험
+                    </p>
+                    <span>
+                      손해보험협회 심의필 제 101381 호(2023.06.24-2024.06.27)
+                    </span>
+                  </div>
+                  <img
+                    src="/assets/img/banner-carrot.jpg"
+                    alt="적게 탄만큼 적게내는 캐롯 퍼마일 자동차보험"
+                  />
+                </a>
+              </li>
+              <li class="swiper-slide slide3">
+                <a href="#">
+                  <div>
+                    <p class="notice-banner-title">
+                      ISMS-P, 인증 최초 심사통과
+                    </p>
+                    <p class="notice-banner-content">
+                      한화생명의 고객 정보 <br />안전하게 보호합니다
+                    </p>
+                  </div>
+                  <img
+                    src="https://static.hanwhalife.com/static/hlp/direct/images/banner/banner-isms-p.svg"
+                    alt="한화생명의 고객 정보 안전하게 보호합니다"
+                  />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </section>
     <footer class="footer">
       <div class="container"></div>
