--- a/한화생명/index.html
+++ b/한화생명/index.html
@@ -89,7 +89,7 @@
         });
 
         // 전체 메뉴 클릭 이벤트
-        $("i.fa-bars").click(function () {
+        $(".fa-bars").click(function () {
           $(".header-menu, .i-class").hide();
           $(".header-click, .header-background").show();
         });
@@ -109,6 +109,18 @@
 
           $(this).toggleClass("on");
         });
+
+        // 헤더 메뉴 호버 이벤트
+        $(".header .container > ul > li")
+          .not(":eq(2), :eq(3)")
+          .hover(
+            function () {
+              $(".header-background").css("display", "block"); // 호버 했을 경우
+            },
+            function () {
+              $(".header-background").css("display", "none"); // 호버 제거
+            }
+          );
       });
     </script>
   </head>
@@ -122,7 +134,6 @@
             alt="한화생명 로고"
           />
         </a>
-        <div class="flex-1"></div>
         <ul class="header-menu">
           <li>
             <a href="">전체상품</a>
@@ -209,8 +220,10 @@
           <li><a href="">이벤트·혜택</a></li>
         </ul>
         <div class="i-class">
-          <i class="far fa-user"></i>
-          <i class="fas fa-bars"></i>
+          <img src="/assets/img/myPage.svg" alt="마이페이지" />
+          <img class="fa-bars" src="/assets/img/menu.svg" alt="메뉴" />
+          <!-- <i class="far fa-user"></i>
+          <i class="fas fa-bars"></i> -->
         </div>
       </div>
       <div class="header-click">
